Add design specs for users resource
